test: Piece & Pawn 테스트 추가